* cealnup deploy folder * added generation.md   * added quickstart without spark * added benchmark.md * added queries.md * cleanup execute folder * some README.md changes

--- a/deploy/dief/Makefile
+++ b/deploy/dief/Makefile
@@ -1,7 +1,8 @@
 
 dief-clone:
 	mkdir -p target
-	git clone https://github.com/Maximiliantoepfer/extraction-framework target/dief
+	git clone https://github.com/Vehnem/extraction-framework.git target/dief
+	cd target/dief && git checkout better-remote-extraction
 
 # java 8 required
 dief-install:
